--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,177 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
+.content-title{
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
-
-.footer {
-  width: 100%;
+  justify-content: center;
+  background-color: rgb(31, 31, 31);
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  min-width: 330px;
+}
+
+.title{
+  color: white;
+  font-size: 40px;
+}
+
+.info{
   display: flex;
   justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  height: 300px;
+  min-width: 330px;
+
 }
 
-.footer a {
+.info__title{
+  color: white;
+  font-size: 27px;
+  margin: 0 auto ;
+}
+
+.info__text{
+  color: white;
+  font-size: 22px;
+  margin: 20px 20px 0;
+  text-align: justify;
+  min-width: 330px;
+}
+
+.content-buttons{
+  min-width: 330px;
+  align-items: center;
   display: flex;
+  flex-direction: column;
+  height: 300px;
   justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
+@media screen and (min-width: 576px) {
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .content-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(31, 31, 31);
+    height: 140px;
   }
+
+  .title{
+    color: white;
+    font-size: 65px;
+  }
+
+  .info{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 300px;
+    margin: 0 10px;
+  }
+
+  .info__text{
+    color: white;
+    font-size: 28px;
+    margin: 20px 50px;
+    text-align: justify;
+  }
+  
+  .content-buttons{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 300px;
+    margin: auto 0;
+  }
+
+}
+
+@media screen and (min-width: 825px) {
+
+  .info{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 450px;
+    margin: 0 10px;
+  }
+
+  .info__text{
+    color: white;
+    font-size: 35px;
+    margin: 20px 50px;
+    text-align: justify;
+  }
+
+  .info__title{
+    color: white;
+    font-size: 40px;
+    margin: 0 auto ;
+  }
+  
+  .content-buttons{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 400px;
+    margin: auto 0;
+  }
+  
+  
+}
+
+@media screen and (min-width: 1200px) {
+
+  .union-info-buttons{
+
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+  }
+
+  .content-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(31, 31, 31);
+    height: 120px;
+  }
+
+  .title{
+    color: white;
+    font-size: 45px;
+  }
+
+  .info{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 450px;
+    margin: 0 10px;
+  }
+
+  .info__text{
+    color: white;
+    font-size: 30px;
+    margin: 20px 50px;
+    text-align: justify;
+  }
+
+  .info__title{
+    color: white;
+    font-size: 40px;
+    margin: 0 auto ;
+  }
+  
+  .content-buttons{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 400px;
+    margin: auto 0;
+  }
+  
 }
