--- a/styles/buttons.module.css
+++ b/styles/buttons.module.css
@@ -10,6 +10,14 @@
   margin: 8px 0;
 }
 
+.form__button--create{
+  font-weight: 700;
+  height: 75px;
+  margin: 40px auto;
+  background-color:#37da3d;
+  box-shadow: 0px 4px 0px #1B962F;
+}
+
 .form__button--green{
   background-color:#37da3d;
   box-shadow: 0px 4px 0px #1B962F;
@@ -37,6 +45,12 @@
     width: 90%;
   }
 
+  .form__button--create {
+    max-width: 550px;
+    height: 80px;
+    font-size: 22px;
+  }
+
 }
 
 @media screen and (min-width: 825px) {
@@ -49,6 +63,11 @@
     font-size: 29px;
     height: 120px;
     width: 90%;
+  }
+
+  .form__button--create{
+    height: 90px;
+    max-width: 700px;
   }
 
 }
@@ -64,6 +83,13 @@
     height: 100px;
     width: 80%;
     transition: margin-right 0.2s ease, font-size 0.2s ease;
+  }
+
+  .form__button--create{
+    font-size: 24px;
+    height: 70px;
+    max-width: 500px;
+    transition: none;
   }
 
   .form__button:hover{
