--- a/styles/buttons.module.css
+++ b/styles/buttons.module.css
@@ -9,6 +9,11 @@
   margin: 8px 0;
 }
 
+.form__button:disabled{
+  background: rgb(156, 156, 156);
+  box-shadow: 0px 4px 0px #646464;
+}
+
 .form__button--create{
   font-weight: 700;
   height: 75px;
