--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -1,5 +1,6 @@
 
 .profile{
+  background-image: url("../assets/pattern.svg");
   display: flex;
   border: 1px rgb(226, 226, 226) solid;
   background-color: #3A3A3A;
@@ -12,7 +13,7 @@
   min-width: 330px;
 }
 
-.profile__image {
+.profileImage {
   border-radius: 200px;
   height: 120px;
   width: 120px;
@@ -32,6 +33,8 @@
 }
 
 .profile-info-container {
+  margin: 10px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -117,7 +120,7 @@
     width: 400px;
   }
 
-  .profile__image {
+  .profileImage {
     margin: 0 25px;
     height: 235px;
     width: 235px;;
@@ -151,7 +154,7 @@
     width: 400px;
   }
 
-  .profile__image {
+  .profileImage {
     height: 270px;
     width: 270px;
   }
