--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -1,9 +1,8 @@
 
 .profile{
-  background-image: url("../assets/pattern.svg");
+  background-image: url("../assets/cool.png");
   display: flex;
   border: 1px rgb(226, 226, 226) solid;
-  background-color: #3A3A3A;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -20,7 +19,7 @@
   margin-bottom: 10px;
 }
 
-.profile__title{
+.profileTitle{
   border-bottom: 6px #BDBDBD solid;
   color: white;
   margin: 0 5px;
@@ -32,7 +31,7 @@
 
 }
 
-.profile-info-container {
+.profileInfoContainer {
   margin: 10px;
   border-radius: 10px;
   display: flex;
@@ -41,7 +40,16 @@
   width: 100%;
 }
 
-.profile__user{
+.infoGroup {
+  background-color: rgb(43, 43, 43);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  padding: 35px;
+}
+
+.profileUser{
   margin-top: 5px;
   color: white;
   font-size: 20px;
@@ -116,7 +124,7 @@
     justify-content: center;
   }
 
-  .profile-info-container {
+  .profileInfoContainer {
     width: 400px;
   }
 
@@ -127,11 +135,11 @@
   }
 
 
-  .profile__title{
+  .profileTitle{
     font-size: 50px;
   }
 
-  .profile__user{
+  .profileUser{
     font-size: 24px;
   }
 
@@ -150,7 +158,7 @@
     max-width: 900px;
   }
 
-  .profile-info-container {
+  .profileInfoContainer {
     width: 400px;
   }
 
@@ -160,7 +168,7 @@
   }
 
 
-  .profile__user{
+  .profileUser{
     font-size: 28px;
   }
 
@@ -197,11 +205,11 @@
 
 @media screen and (min-width: 1200px) {
 
-  .profile__title{
+  .profileTitle{
     font-size: 55px;
   }
 
-  .profile__user{
+  .profileUser{
     font-size: 30px;
   }
 
