--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -1,23 +1,47 @@
 
 .modal {
-  position: fixed;
   z-index: 100;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  margin: auto;
   background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
   overflow-y: scroll;
+}
+
+.topModal{
+  height: 60px;
+  width: 100%;
+  background-color: rgb(26, 26, 26);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px;
+}
+
+.closeButton {
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  height: 25px;
+  width: 25px;
+  border-radius: 50px;
+  background-color: rgb(49, 49, 49);
+  margin-left: 10px;
 }
 
 .title {
   color: white;
-  font-size: 30px;
+  margin-left: 40px;
+  font-size: 18px;
 }
 
 .imageContainer {
@@ -38,32 +62,74 @@
   grid-template-columns: 50% 50%;
 }
 
-
-.bgOption1 {
-  border-radius: 10px;
-  background-image: url("../assets/cool.png");
+.options {
   background-size: 700px;
   margin: 5px;
+  border-radius: 10px;
 }
 
-.bgOption2 {
-  border-radius: 10px;
+.opt1 {
+  background-image: url("../assets/cool.png");
+}
+
+.opt2 {
   background-image: url("../assets/poker.png");
-  background-size: 800px;
-  background-position: 335px 345px;
-  margin: 5px;
 }
 
-.bgOption3 {
-  border-radius: 10px;
+.opt3 {
   background-image: url("../assets/purple.png");
-  background-size: 1080px;
-  margin: 5px;
 }
 
-.bgOption4 {
-  border-radius: 10px;
+.opt4 {
   background-image: url("../assets/fruits.png");
-  background-size: 1080px;
-  margin: 5px;
 }
+
+@media screen and (min-width: 576px) {
+
+  .title {
+    font-size: 20px;
+  }
+  
+  .modalImage {
+    width: 220px;
+    border-radius: 200px;
+  }
+
+  .bgContainer {
+    display: grid;
+    height: 300px;
+    width: 560px;
+    grid-template-columns: 50% 50%;
+  }
+
+  .options {
+    background-size: 700px;
+    margin: 5px;
+    border-radius: 10px;
+  }
+  
+}
+
+@media screen and (min-width: 825px) {
+
+  
+  .modal {
+    margin: 20px auto;
+    border-radius: 15px;
+    width: 700px;
+  }
+
+  .modalImage {
+    width: 220px;
+  }
+
+  .bgContainer {
+    display: grid;
+    height: 300px;
+    width: 510px;
+    grid-template-columns: 50% 50%;
+  }
+
+}
+
+@media screen and (min-width: 1200px) {}
