--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -6,7 +6,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: black;
+  background-color: rgb(31, 31, 31);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,7 @@
 .topModal{
   height: 60px;
   width: 100%;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(12, 12, 12);
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -60,28 +60,39 @@
   height: 230px;
   width: 90%;
   grid-template-columns: 50% 50%;
+  grid-template-rows: 33.3% 33.3% 33.3%; 
 }
 
 .options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-size: 700px;
   margin: 5px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
-.opt1 {
-  background-image: url("../assets/cool.png");
+.selected {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.733);
+  color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.opt2 {
-  background-image: url("../assets/poker.png");
-}
-
-.opt3 {
-  background-image: url("../assets/purple.png");
-}
-
-.opt4 {
-  background-image: url("../assets/fruits.png");
+.selected div{
+  border-radius: 10px;
+  height: 40px;
+  width: 80%;
+  background-color: rgb(41, 41, 41);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
 }
 
 @media screen and (min-width: 576px) {
@@ -105,7 +116,10 @@
   .options {
     background-size: 700px;
     margin: 5px;
-    border-radius: 10px;
+  }
+  
+  .selected div{
+    width: 60%;
   }
   
 }
@@ -120,13 +134,13 @@
   }
 
   .modalImage {
-    width: 220px;
+    width: 230px;
   }
 
   .bgContainer {
     display: grid;
     height: 300px;
-    width: 510px;
+    width: 500px;
     grid-template-columns: 50% 50%;
   }
 
