--- a/styles/buttons.module.css
+++ b/styles/buttons.module.css
@@ -7,6 +7,7 @@
   height: 80px;
   width: 90%;
   margin: 8px 0;
+  cursor: pointer;
 }
 
 .form__button:disabled{
@@ -81,8 +82,8 @@
     border-radius: 11px;
     font-weight: 600;
     color: white;
-    font-size: 26px;
-    height: 95px;
+    font-size: 24px;
+    height: 80px;
     width: 90%;
   }
 
@@ -94,15 +95,15 @@
 
   .form__button--copy{
     font-weight: 700;
-    font-size: 20px;
-    height: 65px;
+    font-size: 18px;
+    height: 55px;
     margin: 40px auto 20px;
   }
 
   .form__button--edit{
     font-weight: 700;
-    font-size: 20px;
-    height: 65px;
+    font-size: 18px;
+    height: 55px;
     margin: 0px auto 10px;
   }
 
@@ -138,7 +139,7 @@
 
   .form__button--copy{
     font-weight: 700;
-    height: 65px;
+    height: 60px;
     font-size: 18px;
     margin: 40px auto 20px;
   }
@@ -146,7 +147,7 @@
   .form__button--edit{
     font-weight: 700;
     font-size: 18px;
-    height: 65px;
+    height: 60px;
     margin: 0px auto 10px;
   }
 
@@ -179,14 +180,14 @@
   .form__button--copy{
     font-weight: 700;
     font-size: 18px;
-    height: 65px;
+    height: 60px;
     margin: 40px auto 20px;
   }
 
   .form__button--edit{
     font-weight: 700;
     font-size: 18px;
-    height: 65px;
+    height: 60px;
     margin: 0px auto 10px;
   }
 
