--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -104,8 +104,8 @@
 
 .question-bg__question{
   border-radius: 3px;
-  background-color: rgb(236, 236, 240);
-  box-shadow: 0px 4px 0px #8F8F8F;
+  background-color: rgb(95, 150, 138);
+  box-shadow: 0px 4px 0px #337463;
   font-family: 'Cairo', sans-serif;
   margin-top: 5px;
   padding: 16px 7px;
