Agregue favicon, cambio los entornos de desarrollo, baje la calidad de las imagenes

--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -21,19 +21,19 @@
 }
 
 .cool {
-  background-image: url("../assets/cool.png");
+  background-image: url("../assets/cool.jpg");
 }
 
 .purple {
-  background-image: url("../assets/purple.png");
+  background-image: url("../assets/purple.jpg");
 }
 
 .poker {
-  background-image: url("../assets/poker.png");
+  background-image: url("../assets/poker.jpg");
 }
 
 .fruits {
-  background-image: url("../assets/fruits.png");
+  background-image: url("../assets/fruits.jpg");
 }
 
 .profileImage {
