Extension de imagen incorecta solucionado

--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -17,7 +17,7 @@
 }
 
 .animals{
-  background-image: url("../assets/animals.png");
+  background-image: url("../assets/animals.jpg");
 }
 
 .cool {
@@ -33,7 +33,7 @@
 }
 
 .fruits {
-  background-image: url("../assets/fruits.jpg");
+  background-image: url("../assets/fruits.png");
 }
 
 .profileImage {
